# ASCII-RPG

OOP-RPG/: CMakeLists.txt  main.cpp
OOP-RPG/combat/: CombatSystem.cpp  CombatSystem.h  DamageType.h  StatusEffect.h
OOP-RPG/core/: Game.cpp  Game.h  GameState.h  SaveSystem.h  World.h
OOP-RPG/entities/: Boss.cpp  Boss.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  NPC.h  Player.cpp  Player.h  Stats.h
OOP-RPG/items/: Armor.cpp  Armor.h  Consumable.cpp  Consumable.h  Enchantment.h  Item.h  Upgrade.h  Weapon.cpp  Weapon.h
OOP-RPG/lore/: Deity.h  Ending.h  LoreEntry.h
OOP-RPG/rendering/: ConsoleRenderer.h  Renderer.h  TileRenderer.h
OOP-RPG/systems/: DialogueSystem.h  EventSystem.h  InputSystem.h
